nav logo alignment correction

--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,8 @@
 
 /* <=== 1. NavBar Css ===>*/
 .navlogo img{
-  width:100%;
-  height: 25px;
+  width:100px;
+  height: 100%;
 }
 /* .navitems .navList{
   display: flex;
